# astrobase-cli

./: .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  testpygke.py
.github/workflows/: publish.yml  test.yaml  test.yml
astrobase_cli/: __init__.py  apply.py  check.py  destroy.py  init.py  main.py  profile.py
astrobase_cli/clients/: aks.py  eks.py  gke.py  kubernetes.py
astrobase_cli/schemas/: command.py  kubernetes.py  resource.py
astrobase_cli/utils/: config.py  params.py
cli/: __init__.py  apply.py  check.py  destroy.py  init.py  main.py  profile.py
cli/clients/: eks.py  gke.py  kubernetes.py
cli/utils/: config.py  params.py
scripts/: bump-version.sh  clean.sh  format-imports.sh  format.sh  install.sh  lint.sh  publish.sh  test-cov-html.sh  test.sh
tests/: conftest.py  test_apply.py  test_apply_aks.py  test_apply_eks.py  test_apply_gke.py  test_check_commands.py  test_cli.py  test_cli_version.py  test_config.py  test_init.py  test_params.py  test_profile.py
tests/assets/: nginx-deployment-params-test.yaml  test-eks-cluster.yaml  test-gke-cluster.yaml  test-resources-aks.yaml  test-resources-eks.yaml  test-resources-gke.yaml  test-resources-multi.yaml  test-resources.yaml
