[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "astrobase_cli"
author = "Astrobase Inc."
author-email = "anthony@astrobase.co"
home-page = "https://www.github.com/astrobase/cli"
description-file = "README.md"
requires-python = ">=3.8"
requires = [
    "docker >=4.4.4",
    "kubernetes >=12.0.1",
    "pydantic >=1.8.1",
    "PyYAML >=5.4.1",
    "sh >=1.14.1",
    "typer >=0.3.2"
]

[tool.flit.metadata.urls]
Documentation = "https://www.github.com/astrobase/cli/docs"

[tool.flit.scripts]
astrobase = "cli.main:app"

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=5.2",
    "mypy >=0.812",
    "coverage >=5.5",
    "pytest-cov >=2.11.1",
    "requests-mock >=1.8.0"
]
dev = [
    "flake8 >=3.8.4",
    "black >=20.8b1",
    "isort >=5.8.0",
    "autoflake >=1.4"
]

[tool.isort]
profile = "black"
